force-app/main/default/objects/Absence__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <label>Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No proof required</fullName>
            </value>
            <value>
                <fullName>Proof/medical required</fullName>
            </value>
            <value>
                <fullName>Proof/medical certificate provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>