force-app/main/default/objects/Absence__c/fields/email_employee__c.field-meta.xml
<CustomField>
    <fullName>email_employee__c</fullName>
    <label>email_employee</label>
    <required>true</required>
    <type>Email</type>
</CustomField>