force-app/main/default/objects/Absence__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Overtime compensation</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Maternity leave</fullName>
            </value>
            <value>
                <fullName>Special leave (paid)</fullName>
            </value>
            <value>
                <fullName>Special leave (unpaid)</fullName>
            </value>
            <value>
                <fullName>disease</fullName>
            </value>
            <value>
                <fullName>No reason</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>